# pdfex

./: README.md  pdf_to_csv.py
webapp/: db.sqlite3  manage.py  pyproject.toml  urls.py
webapp/core/: asgi.py  settings.py  urls.py  views.py  wsgi.py
webapp/filesapp/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
webapp/filesapp/migrations/: 0001_initial.py  0002_clientcoachrelation.py  0003_uploadedfile_year.py
webapp/media/csv/: rozvaha_1_uS8VKV7.csv  vykaz_1.csv
webapp/static/css/: custom.css
webapp/templates/: base.html  dashboard.html  upload.html  welcome.html
webapp/templates/filesapp/: coach_dashboard.html  upload.html  view_table.html
webapp/templates/registration/: login.html  register.html
